syntax = "proto3";

package go_nd.v1;

option go_package = "github.com/banglin/go-nd/gen/go_nd/v1;v1";

import "google/protobuf/timestamp.proto";
import "go_nd/v1/common.proto";

// JobsService handles Slurm job provisioning and lifecycle management
service JobsService {
  // SubmitJob creates a new job and provisions security groups for the compute nodes.
  // Idempotent: returns existing job if slurm_job_id already exists and is active.
  rpc SubmitJob(SubmitJobRequest) returns (SubmitJobResponse);

  // GetJob retrieves a job by its Slurm job ID.
  rpc GetJob(GetJobRequest) returns (GetJobResponse);

  // ListJobs lists all jobs with optional filtering.
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);

  // CompleteJob marks a job as completed and triggers deprovisioning.
  rpc CompleteJob(CompleteJobRequest) returns (CompleteJobResponse);

  // CleanupExpiredJobs removes expired jobs and their resources.
  rpc CleanupExpiredJobs(CleanupExpiredJobsRequest) returns (CleanupExpiredJobsResponse);
}

// Job status enum matching models.JobStatus
enum JobStatus {
  JOB_STATUS_UNSPECIFIED = 0;
  JOB_STATUS_PENDING = 1;
  JOB_STATUS_PROVISIONING = 2;
  JOB_STATUS_ACTIVE = 3;
  JOB_STATUS_DEPROVISIONING = 4;
  JOB_STATUS_COMPLETED = 5;
  JOB_STATUS_CLEANUP_FAILED = 6;
  JOB_STATUS_FAILED = 7;
}

// Job represents a Slurm job with security provisioning
message Job {
  string id = 1;                                    // Internal UUID
  string slurm_job_id = 2;                          // Slurm job ID (unique)
  string name = 3;                                  // Job name
  JobStatus status = 4;                             // Current status
  string error_message = 5;                         // Error details if failed
  string fabric_name = 6;                           // NDFC fabric name
  string vrf_name = 7;                              // VRF name
  string contract_name = 8;                         // Contract name
  google.protobuf.Timestamp submitted_at = 9;       // When job was submitted
  google.protobuf.Timestamp provisioned_at = 10;   // When provisioning completed
  google.protobuf.Timestamp completed_at = 11;     // When job completed
  google.protobuf.Timestamp expires_at = 12;       // Expiration time (if set)
  repeated JobComputeNode compute_nodes = 13;      // Assigned compute nodes
  string security_group_id = 14;                   // Associated security group ID
}

// JobComputeNode links a job to a compute node
message JobComputeNode {
  string id = 1;
  string job_id = 2;
  string compute_node_id = 3;
  string compute_node_name = 4;  // Denormalized for convenience
}

// SubmitJobRequest creates a new job
message SubmitJobRequest {
  string slurm_job_id = 1;          // Required: Slurm job ID
  string name = 2;                   // Optional: Job name
  repeated string compute_nodes = 3; // Required: List of compute node names
}

// SubmitJobResponse returns the created/existing job
message SubmitJobResponse {
  Job job = 1;
  bool created = 2;  // true if new job created, false if existing returned
}

// GetJobRequest retrieves a job by Slurm job ID
message GetJobRequest {
  string slurm_job_id = 1;
}

// GetJobResponse returns the job
message GetJobResponse {
  Job job = 1;
}

// ListJobsRequest lists jobs with optional filters
message ListJobsRequest {
  // Filter by status (empty = all)
  repeated JobStatus statuses = 1;
  // Filter by fabric name
  string fabric_name = 2;
  // Pagination
  PaginationRequest pagination = 3;
}

// ListJobsResponse returns matching jobs
message ListJobsResponse {
  repeated Job jobs = 1;
  PaginationResponse pagination = 2;
}

// CompleteJobRequest marks a job as completed
message CompleteJobRequest {
  string slurm_job_id = 1;
}

// CompleteJobResponse confirms completion
message CompleteJobResponse {
  Job job = 1;
}

// CleanupExpiredJobsRequest triggers cleanup of expired jobs
message CleanupExpiredJobsRequest {}

// CleanupExpiredJobsResponse reports cleanup results
message CleanupExpiredJobsResponse {
  int32 cleaned_count = 1;
  repeated string cleaned_job_ids = 2;
  repeated string failed_job_ids = 3;
}
